# my-mcps

./: setup-mcps.ps1
cr_agent/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
cr_agent/ollama/: Dockerfile  entrypoint.sh
cr_agent/src/: Modelfile  check_install.py  config.py  main.py  meetscribe.conf
cr_agent/src/core/: mcp_tools.py
cr_agent/src/core/agents/: analyzer_agent.py  generator_agent.py  input_agent.py  orchestrator.py  stt_agent.py  writer_agent.py
cr_agent/src/core/utils/: storage_manager.py
hello-mcp/: README.md  hello_mcp.py
ollama-mcp/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.ps1  run.sh  server.py
ollama-mcp/ollama/: Dockerfile  entrypoint.sh
